# reg_check

./: .gitignore  PDFDocExtractor.py  RegDoc.py  agents_example.py  app.py  chain_reaction.py  chains.py  chat.py  extract_data.py  langchain.py  llama.ipynb  llm_models.py  models.py  output.md  pdf_extraction.py  pdf_extraction_langchain.py  pdf_extractor.ipynb  pyproject.toml  util.py  webscrapping.py
data/: abcb-housing-provisions-2022-20230501b.txt
